--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@
 /EjercicioClase2/nbproject/private/
 /EjercicioClase2/dist/
 /EjercicioClase2/build/
+/EjercicioClase3/nbproject/private/
+/EjercicioClase3/dist/
+/EjercicioClase3/build/
