--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@
 /EjercicioClase3/nbproject/private/
 /EjercicioClase3/dist/
 /EjercicioClase3/build/
+/Taller1/nbproject/private/
+/Practica3/nbproject/private/
+/Practica3/build/
+/Practica3/dist/
