--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@
 /Practica3/nbproject/private/
 /Practica3/build/
 /Practica3/dist/
+/Practica4/nbproject/private/
+/Practica4/build/
+/Practica4/dist/
