--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@
 /Practica4/dist/
 /Taller2/nbproject/private/
 /Taller2/build/
+/TallerBusquedaLineal/nbproject/private/
+/TallerBusquedaLineal/build/
