--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@
 /Taller2/build/
 /TallerBusquedaLineal/nbproject/private/
 /TallerBusquedaLineal/build/
+/EjercicioClase5/nbproject/private/
+/EjercicioClase5/build/
