--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@
 /TallerBusquedaLineal/build/
 /EjercicioClase5/nbproject/private/
 /EjercicioClase5/build/
+/Deber1/nbproject/private/
+/Deber1/build/
