--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@
 /EjercicioClase5/build/
 /Deber1/nbproject/private/
 /Deber1/build/
+/BusquedaBinaria/nbproject/private/
+/BusquedaBinaria/build/
+/Practica5/nbproject/private/
+/Practica5/build/
