--- a/ProyectoIB/nbproject/private/private.properties
+++ b/ProyectoIB/nbproject/private/private.properties
@@ -1,2 +1,8 @@
-compile.on.save=true
+compile.on.save=false
+do.depend=true
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\Renato\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
