--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@
 /ProyectoI/dist/
 /ListaCircular/nbproject/private/
 /ListaCircular/build/
+/ListaCircularDoble/nbproject/private/
+/ListaCircularDoble/build/
+/Pilas/nbproject/private/
+/Pilas/build/
+/EjercicioClase12/nbproject/private/
+/EjercicioClase12/build/
