--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,6 @@
 /Pilas/build/
 /EjercicioClase12/nbproject/private/
 /EjercicioClase12/build/
+/Colas/nbproject/private/
+/Practica8/nbproject/private/
+/Practica8/build/
