--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,12 @@
 /Colas/nbproject/private/
 /Practica8/nbproject/private/
 /Practica8/build/
+/Recursividad/nbproject/private/
+/Recursividad/build/
+/Arboles/nbproject/private/
+/Arboles/build/
+/Arbol/nbproject/private/
+/Arbol/build/
+/Arbol/dist/
+/PruebaIIB/nbproject/private/
+/PruebaIIB/build/
