--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,12 @@
 /Arbol/dist/
 /PruebaIIB/nbproject/private/
 /PruebaIIB/build/
+/Arbol-B/nbproject/private/
+/Arbol-B/build/
+/Arbol-B/dist/
+/Hash/nbproject/private/
+/Hash/build/
+/Hash/dist/
+/Grafos/nbproject/private/
+/Grafos/build/
+/ProyectoIIBimestre/dist/
